--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,12 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "High Low",
+  "name": "Higher or Lower",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "aces.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
   ],
   "start_url": ".",
   "display": "standalone",
